--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -70,7 +70,7 @@
                                 <span>感谢您对校友会工作的支持！</span>
                             </div>
                             <div class="col-md-6 mt-3 mt-md-0 donate-me">
-                                <h5><b>赏赐程序员(微信)</b></h5>
+                                <h5><b>打赏程序员(微信)</b></h5>
                                 <img src="img\donate-me.png" class="w-100">
                             </div>
                         </div>
