--- a/templates/views/about-us.hbs
+++ b/templates/views/about-us.hbs
@@ -17,7 +17,10 @@
     <small class="d-block text-right">（图片来源: 深圳大学官网）</small>
     <div class="about-us w-75 mx-auto py-3">
         <h3 class="mb-3" style="color:#bc1e58"><b>关于我们：</b></h3>
-        <p>深圳大学安省校友会于2019年在加拿大多伦多正式成立。宣扬互助友爱精神，组织面向家庭的娱乐活动。</p>
+        <p>那些年，晚自习灯火辉煌，图书馆埋头探索，电脑机房光影交错，球场上我们挥洒汗水，宿舍里我们欢声笑语；曾忆否，授业恩师谆谆教诲，同门少年恣意青春……时间的流逝，无法磨灭我们对母校的拳拳之情；空间的距离，不能阻隔我们对母校的深深眷恋。各位校友，无论你风华正茂，无论你两鬓染霜，我们曾求知于同一片殿堂；无论你功成名就，无论你默默无闻，我们都把人生最美好的时光，留在了文山湖畔、杜鹃山下。岁月在我们身上刻下多少年轮，世事在我们心头敲击多少印记，我们都永远铭记那个梦开始的地方！</p>
+        <p>在深圳大学建校36周年之际，为弘扬母校精神，培育校友文化，满足校友“常回家看看”的美好愿望，时差12小时的地球那一边，我们深大安省校友会2019年7月6日在加拿大多伦多正式成立。“树高千尺总有根，水流万里终有源”，谨记着“自立、自律、自强”的校训，往日脚踏实地的深大学子们在异国他乡建立起一座同根同源的海外家园，可喜可贺！</p>
+        <p>深大安省校友会建立的宗旨是搭建健康积极向上的交流平台，促进校友之间的联系、协调和合作，包括和不限于：联合校友，谋求及维护在海外的共同的权益与福利；提升校友作为中国移民在加拿大安省的地位与影响力；推动校友之间的联谊活动，包括学术，文化和商务交流 ；加强校友与母校之间的联系，开展和支持与其他校友会之间的联谊活动。</p>
+        <p>过去几年，在各类高校组织的活动中，包括高校杯各类运动竞赛，乒乓球、高尔夫球、羽毛球、排球、拔河，春晚，联谊等，校友们自发组织，自费参与，并在各个项目取得了有目共睹的好成绩。这在没有成立校友会，没有财政支持的各高校中是绝无仅有的！校友们在活动中增强了集体荣誉感和校友之间的凝聚力，深大校友的风采也在加拿大华人圈里广为人知，安省校友会就是在这种氛围里应运而生。</p>
     </div>
 </div>
 
