--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -44,7 +44,7 @@
             <div class="card h-100">
                 <img src="img\donate-me.png" class="card-img-top">
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">公司名字</h5>
+                    <h5 class="card-title">打赏一下</h5>
                     <p class="card-text">公司logo(最好上传方形图)，这里可以填写公司简介，例如业务简介，联系方式，公司地址等等</p>
                     <a href="JavaScript:Void(0);" class="stretched-link mt-auto"><u>公司链接 >></u></a>
                 </div>
