--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -29,31 +29,19 @@
                 <div class="row" >
                     <div class="col-md-4 carousel-words-box">
                         <div class="carousel-words">
-                            <h3>深大安省校友会2019圣诞暨新年聚会</h3>
-                            <p>同学是一种很奇妙的关系，因为共同的学校，把不同家庭背景的个体联系在一起，共享了成长的快乐；海外校友会又进一步地演绎了“殊途同归”这一成语，把不同专业或年级曾经擦身而过的一缕缘分又重新拧在一处。无法推测至尊宝和紫霞500年穿越相会的缘由，但我们的骄傲，来自于一个共同的名字：深圳大学。</p>
+                            <h3>2019思源杯高校羽毛球赛</h3>
+                            <p>深圳大学&amp;成都理工大学&amp;北京联合大学联队，成功晋级8强！</p>
+                            <p>身在多城心系国，</p>
+                            <p>飘蓬江海谩嗟跎。</p>
+                            <p>他日若遂凌云志，</p>
+                            <p>敢笑黄巢不丈夫！</p>
                             <blockquote class="blockquote text-right">
                                 <footer class="blockquote-footer">机电91级 August Jian</footer>
                             </blockquote> 
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/xmas-event.png" alt="First slide">
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <div class="row" >
-                    <div class="col-md-4 carousel-words-box">
-                        <div class="carousel-words">
-                            <h3>深大安省校友会2019圣诞暨新年聚会</h3>
-                            <p>同学是一种很奇妙的关系，因为共同的学校，把不同家庭背景的个体联系在一起，共享了成长的快乐；海外校友会又进一步地演绎了“殊途同归”这一成语，把不同专业或年级曾经擦身而过的一缕缘分又重新拧在一处。无法推测至尊宝和紫霞500年穿越相会的缘由，但我们的骄傲，来自于一个共同的名字：深圳大学。</p>
-                            <blockquote class="blockquote text-right">
-                                <footer class="blockquote-footer">机电91级 August Jian</footer>
-                            </blockquote> 
-                        </div>
-                    </div>
-                    <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/xmas-event.png" alt="First slide">
+                        <img class="d-md-block w-100" src="img/carousel/badminton2019.png" alt="First slide">
                     </div>
                 </div>
             </div>
