--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -20,7 +20,7 @@
                         <a class="nav-link" href="/members">成员架构</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" data-toggle="modal" data-target="#donateModal">热线捐赠</a>
+                        <a class="nav-link" href="#" data-toggle="modal" data-target="#donateModal">热心捐赠</a>
                     </li>
                 </ul>
             </div>
