--- a/templates/views/about-us.hbs
+++ b/templates/views/about-us.hbs
@@ -13,7 +13,7 @@
     
 {{!-- 关于我们 --}}
 <div class="container-fluid" id="about-us">
-    <img src="img\szu-banner.png" class="w-100">
+    <img src="img\szu-banner.png" class="img-fluid">
     <small class="d-block text-right">（图片来源: 深圳大学官网）</small>
     <div class="about-us w-75 mx-auto py-3">
         <h3 class="mb-3" style="color:#bc1e58"><b>关于我们：</b></h3>
