--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -13,6 +13,10 @@
 
 {{!-- 校友企业 --}}
 <div class="container-fluid" id="enterprise">
+    <div class="border border-danger rounded w-100 p-3">
+        <span class="text-danger">*请有意向在这发广告的校友，将相关信息发至我邮箱 gordonyuzr@gmail.com ，如公司名字，业务介绍，联系方式，公司网站（如有）。还有，请注明您的姓名或微信名，以便我确认您的确是校友会成员。我会尽快更新到网页上。</span>
+    </div>
+
     <div class="row row-cols-1 row-cols-md-3 w-75 mx-auto my-4">
         <div class="col mb-4">
             <div class="card h-100">
