--- a/templates/views/members.hbs
+++ b/templates/views/members.hbs
@@ -48,7 +48,7 @@
                 </tr>
 
                 <tr>
-                    <td>Lydia</td>
+                    <td>周迅梅</td>
                     <td>法务长</td>
                 </tr>
 
