--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -29,23 +29,23 @@
 
         <div class="row w-50 mx-auto social-media">
             <div class="col-3 text-center">
-                <a href="https://www.facebook.com/groups/1073288389542329/" target="_blank" data-toggle="tooltip" data-placement="top" title="Facebook">
+                <a href="https://www.facebook.com/groups/1073288389542329/" target="_blank" title="Facebook">
                     <i class="fab fa-facebook-square text-dark"></i>
                 </a>
             </div>
             <div class="col-3 text-center">
-                <a href="https://www.linkedin.com/groups/13731974/" target="_blank" data-toggle="tooltip" data-placement="top" title="LinkedIn">
+                <a href="https://www.linkedin.com/groups/13731974/" target="_blank" title="LinkedIn">
                     <i class="fab fa-linkedin text-dark"></i>
                 </a>
             </div>
             <div class="col-3 text-center">
                 <a href="#" data-toggle="modal" data-target="#wechatModal">
-                    <i class="fab fa-weixin text-dark" data-toggle="tooltip" data-placement="top" title="WeChat"></i>
+                    <i class="fab fa-weixin text-dark" title="WeChat"></i>
                 </a>
             </div>
             <div class="col-3 text-center">
                 <a href="#" data-toggle="modal" data-target="#emailModal">
-                    <i class="fas fa-envelope text-dark" data-toggle="tooltip" data-placement="top" title="Email to us"></i>
+                    <i class="fas fa-envelope text-dark" title="Email to us"></i>
                 </a>
             </div>
         </div>
@@ -128,10 +128,4 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
     <script src="js/script.js"></script>
-
-    <script>
-        $(function () {
-            $('[data-toggle="tooltip"]').tooltip()
-        })
-    </script>
 </html>
