--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,9 +6,25 @@
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <div class="row">
+                    <div class="col-md-4 carousel-words-box">
+                        <div class="carousel-words">
+                            <h3>深大安省校友会成立了！</h3>
+                            <p>在深圳大学建校36周年之际，为弘扬母校精神，培育校友文化，满足校友“常回家看看”的美好愿望，时差12小时的地球那一边，我们深大安省校友会2019年7月6日在加拿大多伦多正式成立。</p>
+                            <blockquote class="blockquote text-right">
+                            </blockquote> 
+                        </div>
+                    </div>
+                    <div class="col-md-8 carousel-img">
+                        <img class="d-md-block w-100" src="img\carousel\Toronto.png">
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
                 <div class="row">
                     <div class="col-md-4 carousel-words-box">
                         <div class="carousel-words">
@@ -20,7 +36,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/xmas-event.png" alt="First slide">
+                        <img class="d-md-block w-100" src="img/carousel/xmas-event.png">
                     </div>
                 </div>
             </div>
@@ -30,17 +46,14 @@
                         <div class="carousel-words">
                             <h3>2019思源杯高校羽毛球赛</h3>
                             <p>深圳大学&amp;成都理工大学&amp;北京联合大学联队，成功晋级8强！</p>
-                            <p>身在多城心系国，</p>
-                            <p>飘蓬江海谩嗟跎。</p>
-                            <p>他日若遂凌云志，</p>
-                            <p>敢笑黄巢不丈夫！</p>
+                            <p>身在多城心系国，<br>飘蓬江海谩嗟跎。<br>他日若遂凌云志，<br>敢笑黄巢不丈夫！</p>
                             <blockquote class="blockquote text-right">
                                 <footer class="blockquote-footer">机电91级 August Jian</footer>
                             </blockquote> 
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/badminton2019.png" alt="First slide">
+                        <img class="d-md-block w-100" src="img/carousel/badminton2019.png">
                     </div>
                 </div>
             </div>
@@ -85,8 +98,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 
