--- a/templates/views/members.hbs
+++ b/templates/views/members.hbs
@@ -13,7 +13,7 @@
 
 <div class="container-fluid" id="members">
     <div class="w-75 mx-auto members table-responsive">
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover table-bordered text-center">
             <caption>成员架构 Update:2019</caption>
             <thead>
                 <tr>
