--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,8 @@ body {
     flex-direction: column;
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -29,7 +30,7 @@ a:hover {
 .navbar-brand span {
     font-size: 3rem;
     font-family: "Zhi Mang Xing", cursive;
-    letter-spacing: -0.2rem;
+    letter-spacing: -0.1rem;
 }
 
 .navbar-brand:hover {
@@ -39,7 +40,7 @@ a:hover {
 @media screen and (max-width: 767.98px) {
     .navbar-brand span {
         font-size: 2rem;
-        letter-spacing: -0.4rem;
+        letter-spacing: -0.3rem;
     }
 }
 
@@ -50,7 +51,7 @@ a:hover {
 
 /* carousel */
 .carousel-item {
-    height: 40vw;
+    height: 41vw;
     background: #bc1e58;
 }
 
@@ -73,13 +74,13 @@ a:hover {
 }
 
 .carousel-item .carousel-words-box .carousel-words p {
-    font-size: 1.4vw;
+    font-size: 1.5vw;
     margin: 0.6vw 0;
     color: #fdfefd;
 }
 
 .blockquote-footer {
-    font-size: 1.3vw;
+    font-size: 1.4vw;
     color: #fdfefd;
 }
 
@@ -141,4 +142,25 @@ a:hover {
     #donateModal .modal-body .donate-me {
         border: none;
     }
+}
+
+/* enterprise */
+#category .card div:nth-child(1) i {
+    color: #bc1e58;
+    font-size: 5rem;
+}
+
+/* back-to-top */
+#back-to-top {
+    position: fixed;
+    bottom: 38%;
+    float: right;
+    right: 0.5%;
+    font-size: 2rem;
+    color: #bc1e58;
+}
+
+#back-to-top:hover {
+    color: #e4122e;
+    font-size: 2.1rem;
 }
