--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -13,54 +13,194 @@
     
 
 <div class="container-fluid" id="sport-teams">
-    <div class="w-75 mx-auto sport-teams table-responsive">
-        <table class="table table-hover table-bordered">
-            <caption></caption>
-            <thead>
-                <tr>
-                    <th scope="col">俱乐部</th>
-                    <th scope="col">队长</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>羽毛球俱乐部</td>
-                    <td>August Jian</td>
-                </tr>
-                <tr>
-                    <td>乒乓球俱乐部</td>
-                    <td>Grace Z</td>
-                </tr>
-                <tr>
-                    <td>Hiking俱乐部</td>
-                    <td>Jeffrey Ji</td>
-                </tr>
-                <tr>
-                    <td>排球俱乐部</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>舞蹈俱乐部</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>自行车俱乐部</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>射箭俱乐部</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>高尔夫俱乐部</td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>摄影俱乐部</td>
-                    <td></td>
-                </tr>
-            </tbody>
-        </table>
+
+    <div class="w-75 mx-auto my-3">
+        <div class="accordion" id="accordionTeams">
+
+            <div class="card">
+                <div class="card-header" id="headingBadminton">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseBadminton" aria-expanded="false" aria-controls="collapseBadminton">
+                            >> 羽毛球俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseBadminton" class="collapse" aria-labelledby="headingBadminton" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\carousel\badminton2019.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：August Jian</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingTableTennis">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseTableTennis" aria-expanded="false" aria-controls="collapseTableTennis">
+                            >> 乒乓球俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseTableTennis" class="collapse" aria-labelledby="headingTableTennis" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：Grace Z</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingHiking">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseHiking" aria-expanded="false" aria-controls="collapseHiking">
+                            >> 远足登山俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseHiking" class="collapse" aria-labelledby="headingHiking" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：Jeffrey Ji</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingVolley">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseVolley" aria-expanded="false" aria-controls="collapseVolley">
+                            >> 排球俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseVolley" class="collapse" aria-labelledby="headingVolley" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingDance">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseDance" aria-expanded="false" aria-controls="collapseDance">
+                            >> 舞蹈俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseDance" class="collapse" aria-labelledby="headingDance" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingTennis">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseTennis" aria-expanded="false" aria-controls="collapseTennis">
+                            >> 网球俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseTennis" class="collapse" aria-labelledby="headingTennis" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingDrag">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseDrag" aria-expanded="false" aria-controls="collapseDrag">
+                            >> 拔河俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseDrag" class="collapse" aria-labelledby="headingDrag" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header" id="headingGolf">
+                    <h5 class="mb-0">
+                        <a href="#" class="collapsed stretched-link" data-toggle="collapse" data-target="#collapseGolf" aria-expanded="false" aria-controls="collapseGolf">
+                            >> 高尔夫俱乐部
+                        </a>
+                    </h5>
+                </div>
+                <div id="collapseGolf" class="collapse" aria-labelledby="headingGolf" data-parent="#accordionTeams">
+                <div class="card-body">
+                    <div class="row row-cols-1 row-cols-md-2">
+                        <div>
+                            <img src="img\sz-logo.png" class="w-100">
+                        </div>
+                        <div class="p-3">
+                            <p><b>队长：</b></p>
+                            <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 </div>
