--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -119,7 +119,7 @@
     </div>
 </div>
 
-<a href="#navbar" id="back-to-top" class="d-none d-lg-inline"><i class="fas fa-arrow-up"></i></a>
+<a href="#" id="back-to-top" class="d-none d-lg-inline"><i class="fas fa-arrow-up"></i></a>
 
 </body>
     
@@ -130,4 +130,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     
     <script src="js/script.js"></script>
+
+    <script>
+    $('#back-to-top').on('click', () => {
+        $("body,html").animate({scrollTop:0},500);
+    })
+</script>
 </html>
