--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -597,7 +597,7 @@
 {{>footer}}  
 
 <script>
-    $('#category').on('click', (e) => {
+    $('#category .card').on('click', (e) => {
         let destination = e.target.getAttribute('href');
         $("html,body").animate({scrollTop: $(destination).offset().top}, 500);
     })
