--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img\carousel\Toronto.png">
+                        <img class="w-100" src="img\carousel\Toronto.png">
                     </div>
                 </div>
             </div>
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/xmas-event.png">
+                        <img class="w-100" src="img/carousel/xmas-event.png">
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 carousel-img">
-                        <img class="d-md-block w-100" src="img/carousel/badminton2019.png">
+                        <img class="w-100" src="img/carousel/badminton2019.png">
                     </div>
                 </div>
             </div>
