--- a/templates/views/enterprise.hbs
+++ b/templates/views/enterprise.hbs
@@ -89,7 +89,7 @@
         <div class="col mb-4">
             <div class="card h-100">
                 <div class="w-100">
-                    <div id="August-company" class="carousel slide" data-ride="carousel">
+                    <div id="August-Jian" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active company-cover">
                                 <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
@@ -101,11 +101,11 @@
                                 <img src="img\enterprise\qr-code\August-Jian.jpg" class="card-img-top">
                             </div>
                         </div>
-                        <a class="carousel-control-prev" href="#August-company" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#August-Jian" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#August-company" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#August-Jian" role="button" data-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="sr-only">Next</span>
                         </a>
@@ -113,9 +113,9 @@
                 </div>
                 <div class="card-body d-flex flex-column">
                     <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
+                    <p class="card-text my-0">电话: 905.305.9099</p>
+                    <p class="card-text my-0">邮箱: august.jian@gmail.com</p>
+                    <p class="card-text my-0">地址: Unit 402, 3100 Steeles Ave East Markham ON L3R 8T3</p>
                     <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
@@ -213,20 +213,39 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 w-75 mx-auto my-3">
         <div class="col mb-4">
             <div class="card h-100">
-                <div class="w-100 company-cover">
-                    <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
+                <div class="w-100">
+                    <div id="Lydia-Zhou" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active company-cover">
+                                <img src="img\enterprise\logo\Lydia-Zhou.png" class="card-img-top">
+                            </div>
+                            <div class="carousel-item company-cover">
+                                <img src="img\enterprise\qr-code\Lydia-Zhou.jpg" class="card-img-top">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#Lydia-Zhou" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#Lydia-Zhou" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
-                    <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    <h5 class="card-title">逦凯律师事务所</h5>
+                    <p class="card-text my-0">迤逦加国，以法护航</p>
+                    <p class="card-text my-0">立足华社，助君凯旋</p>
+                    <p class="card-text my-0">电话：416-490-8555</p>
+                    <p class="card-text my-0">传真：416-490-9555</p>
+                    <p class="card-text my-0">邮箱：xunmei@lklawfirm.ca</p>
+                    <p class="card-text my-0">地址：250 Consumers Road, Suite 909, North York, M2J 4V6</p>
+                    <a href="https://www.lklawfirm.ca" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted d-block">August Jian</small>
-                    <small class="text-muted d-block">Executive VP Real Estate</small>
+                    <small class="text-muted d-block">周迅梅</small>
+                    <small class="text-muted d-block">律师、公证人</small>
                 </div>
             </div>
         </div>
@@ -321,19 +340,16 @@
         <div class="col mb-4">
             <div class="card h-100">
                 <div class="w-100 company-cover">
-                    <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
+                    <img src="img\sz-logo.png" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
-                    <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    <h5 class="card-title">公司名字</h5>
+                    <p class="card-text">公司logo(最好上传方形图)，这里可以填写公司简介，例如业务简介，联系方式，公司地址等等</p>
+                    <a href="JavaScript:Void(0);" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted d-block">August Jian</small>
-                    <small class="text-muted d-block">Executive VP Real Estate</small>
+                    <small class="text-muted d-block">校友姓名</small>
+                    <small class="text-muted d-block">职位</small>
                 </div>
             </div>
         </div>
@@ -427,19 +443,17 @@
         <div class="col mb-4">
             <div class="card h-100">
                 <div class="w-100 company-cover">
-                    <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
+                    <img src="img\sz-logo.png" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
-                    <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    <h5 class="card-title">Amazon MorShine US</h5>
+                    <p class="card-text my-0">邮箱: </p>
+                    <p class="card-text my-0">地址:</p>
+                    <a href="JavaScript:Void(0);" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted d-block">August Jian</small>
-                    <small class="text-muted d-block">Executive VP Real Estate</small>
+                    <small class="text-muted d-block">黄奕君</small>
+                    <small class="text-muted d-block">Coral</small>
                 </div>
             </div>
         </div>
@@ -533,19 +547,16 @@
         <div class="col mb-4">
             <div class="card h-100">
                 <div class="w-100 company-cover">
-                    <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
+                    <img src="img\qr-code.png" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
-                    <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    <h5 class="card-title">网站制作</h5>
+                    <p class="card-text">给个人工作室、中小型企业制作公司网站。价格从优。</p>
+                    <a href="JavaScript:Void(0);" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted d-block">August Jian</small>
-                    <small class="text-muted d-block">Executive VP Real Estate</small>
+                    <small class="text-muted d-block">余卓燃-09计算机</small>
+                    <small class="text-muted d-block">职位</small>
                 </div>
             </div>
         </div>
@@ -640,19 +651,16 @@
         <div class="col mb-4">
             <div class="card h-100">
                 <div class="w-100 company-cover">
-                    <img src="https://www.upicanada.com/images/blogo.png" class="card-img-top">
+                    <img src="img\qr-code.png" class="card-img-top">
                 </div>
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">联众国际咨询有限公司</h5>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Email: august.jian@gmail.com</p>
-                    <p class="card-text my-0">Office: 905.305.9099</p>
-                    <p class="card-text my-0">Address: Unit 402 3100 Steeles Ave East, Markham ON Canada L3R 8T3</p>
-                    <a href="https://www.upicanada.com" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
+                    <h5 class="card-title">网站制作</h5>
+                    <p class="card-text">给个人工作室、中小型企业制作公司网站。价格从优。</p>
+                    <a href="JavaScript:Void(0);" class="mt-auto" target="_blank"><u>公司链接 >></u></a>
                 </div>
                 <div class="card-footer text-right">
-                    <small class="text-muted d-block">August Jian</small>
-                    <small class="text-muted d-block">Executive VP Real Estate</small>
+                    <small class="text-muted d-block">余卓燃-09计算机</small>
+                    <small class="text-muted d-block">职位</small>
                 </div>
             </div>
         </div>
