--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -71,7 +71,7 @@
                             </div>
                             <div class="col-md-6 mt-3 mt-md-0 donate-me">
                                 <h5><b>打赏程序员(微信)</b></h5>
-                                <img src="img\donate-me.png" class="w-100">
+                                <img src="/img/donate-me.png" class="w-100">
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <img src="img\qr-code.png" class="w-100">
+                        <img src="/img/qr-code.png" class="w-100">
                     </div>
                 </div>
             </div>
@@ -112,7 +112,7 @@
         </div>
 
         <div class="copyright text-center">
-            <span>Copyright © 2019 深大安省校友会</span><br>
+            <span>Copyright &copy; 2019 深大安省校友会</span><br>
             <span>Designed by Zhuoran Yu</span>
         </div>
 
@@ -124,14 +124,9 @@
 </body>
 
 
-    {{!-- bootstrap js --}}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    
-    <script src="js/script.js"></script>
+<script src="/js/script.js"></script>
 
-    <script>
+<script>
     $('#back-to-top').on('click', () => {
         $("body,html").animate({scrollTop:0},500);
     })
