--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>深圳大学安省校友会</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
     
     
@@ -17,10 +17,16 @@
     <link href="https://fonts.googleapis.com/css?family=Zhi+Mang+Xing&display=swap&subset=chinese-simplified" rel="stylesheet">
 
     {{!-- style file --}}
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     {{!-- font awesome --}}
     <script src="https://kit.fontawesome.com/4f89a3253f.js" crossorigin="anonymous"></script>
+
+    {{!-- bootstrap js --}}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    
 
 </head>
 <body>
@@ -29,12 +35,12 @@
 {{!-- navbar --}}
 <div class="container-fluid" id="navbar">
     <nav class="navbar navbar-expand-md navbar-light">
-        <a class="navbar-brand d-none d-md-inline-block" href="/">
-            <img src="img/sz-logo.png" height="80" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand d-none d-md-inline-block font-weight-normal" href="/">
+            <img src="/img/sz-logo.png" height="80" class="d-inline-block align-top" alt="">
             <span>深圳大学安省校友会</span>
         </a>
-        <a class="navbar-brand d-md-none d-inline-block" href="/">
-            <img src="img/sz-logo.png" height="45" class="d-inline-block align-top" alt="">
+        <a class="navbar-brand d-md-none d-inline-block font-weight-normal" href="/">
+            <img src="/img/sz-logo.png" height="45" class="d-inline-block align-top" alt="">
             <span>深大安省校友会</span>
         </a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
