--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -29,7 +29,7 @@
                 <div class="card-body">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div>
-                            <img src="img\carousel\badminton2019.png" class="w-100">
+                            <img src="img\teams\badminton-team.png" class="w-100">
                         </div>
                         <div class="p-3">
                             <p><b>队长：August Jian</b></p>
