--- a/templates/views/events.hbs
+++ b/templates/views/events.hbs
@@ -24,7 +24,7 @@
                             <a id="{{id}}" href="#" class="list-group-item list-group-item-action px-2 border-primary list-group-item-primary font-weight-normal stretched-link">
                                 <div class="d-flex">
                                     <span class="flex-grow-1 mr-3 text-truncate">{{title}}</span>
-                                    <span>{{event_date}}</span>
+                                    <span class="flex-shrink-0">{{event_date}}</span>
                                 </div>
                             </a>
                         {{/ history_events}}
@@ -58,7 +58,7 @@
                         <a id="{{id}}" href="#" class="list-group-item list-group-item-action px-2 border-success list-group-item-success font-weight-normal stretched-link">
                             <div class="d-flex">
                                 <span class="flex-grow-1 mr-3 text-truncate">{{title}}</span>
-                                <span>{{event_date}}</span>
+                                <span class="flex-shrink-0">{{event_date}}</span>
                             </div>
                         </a>
                         {{/ future_events}}
