add download files

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,6 +1,6 @@
 {{>header}}
 
-{{!-- carousel slide --}}
+{{!-- carousel slide 图片尺寸比例3:2--}}
 <div class="container-fluid" id="carousel">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
