--- a/templates/views/sport-teams.hbs
+++ b/templates/views/sport-teams.hbs
@@ -52,7 +52,7 @@
                 <div class="card-body">
                     <div class="row row-cols-1 row-cols-md-2">
                         <div>
-                            <img src="img\sz-logo.png" class="w-100">
+                            <img src="\img\teams\table-tennis-team.jpg" class="w-100">
                         </div>
                         <div class="p-3">
                             <p><b>队长：Grace Z</b></p>
@@ -170,7 +170,7 @@
                             <img src="img\sz-logo.png" class="w-100">
                         </div>
                         <div class="p-3">
-                            <p><b>队长：</b></p>
+                            <p><b>队长：苏涛</b></p>
                             <p>成员：名字、名字、名字、名字、名字、名字、名字、名字、名字、名字</p>
                         </div>
                     </div>
