--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -20,6 +20,9 @@
                         <a class="nav-link" href="/members">成员架构</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/downloads">文件下载</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#donateModal">热心捐赠</a>
                     </li>
                 </ul>
