--- a/templates/views/members.hbs
+++ b/templates/views/members.hbs
@@ -23,37 +23,67 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>孙晋</td>
+                    <td>孙晋 William</td>
                     <td>会长</td>
                 </tr>
 
                 <tr>
-                    <td>Jeff Ding</td>
+                    <td>丁杰 Jeff</td>
                     <td>副会长</td>
                 </tr>
 
                 <tr>
-                    <td>Kimberly</td>
+                    <td>阮海丽 Kimberly</td>
                     <td>秘书长</td>
                 </tr>
 
                 <tr>
-                    <td>Grace Z</td>
+                    <td>曾小萍 Grace</td>
                     <td>执行会长</td>
                 </tr>
 
                 <tr>
-                    <td>Bryan Chan</td>
+                    <td>陈国兴 Bryan</td>
                     <td>财务长</td>
                 </tr>
 
                 <tr>
-                    <td>周迅梅</td>
+                    <td>周迅梅 Lydia</td>
                     <td>法务长</td>
                 </tr>
 
                 <tr>
-                    <td>Jeffrey Ji</td>
+                    <td>纪汉京 Jeffrey</td>
+                    <td>理事</td>
+                </tr>
+
+                <tr>
+                    <td>林昕 Kevin</td>
+                    <td>理事</td>
+                </tr>
+
+                <tr>
+                    <td>谢火钦</td>
+                    <td>理事</td>
+                </tr>
+
+                <tr>
+                    <td>李碧君 Vanessa</td>
+                    <td>理事</td>
+                </tr>
+
+                <tr>
+                    <td>戴劲 David</td>
+                    <td>理事</td>
+                </tr>
+
+                <tr>
+                    <td>苏涛</td>
+                    <td>理事</td>
+                </tr>
+                
+                <tr>
+                    <td>辛亚飞</td>
                     <td>理事</td>
                 </tr>
             </tbody>
