--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -15,15 +15,19 @@
 {{!-- 活动报道 --}}
 <div class="container-fluid" id="event-page">
     <div class="w-75 mx-auto my-3">
+        {{#if login}}
+        <div class="d-flex flex-wrap">
+            <button type="button" class="btn btn-outline-primary mx-auto my-3 d-block">编辑</button>
+            <button type="button" class="btn btn-outline-primary mx-auto my-3 d-block">删除</button>
+        </div>
+        
+        {{/if}}
         <p class="sr-only">{{id}}</p>
         <h3 class="text-center mb-3">{{title}}</h3>
         <p class="text-center my-3"><small>活动日期：{{event_date}} &nbsp; 作者：{{author}} &nbsp; 发表日期：{{create_date}}</small></p>
         {{breaklines content}}
     </div>
 </div>
-
-
-
 
 
 {{>footer}}  
