--- a/templates/views/events.hbs
+++ b/templates/views/events.hbs
@@ -14,6 +14,9 @@
     
 <div class="container-fluid" id="events">
     <div class="w-100 mx-auto">
+        {{#if login}}
+        <button type="button" class="btn btn-outline-primary mx-auto my-3 d-block">新建活动</button>
+        {{/if}}
         <div class="row row-cols-1 row-cols-md-2">
             {{!-- 往期活动 --}}
             <div class="col d-flex flex-column align-items-center px-5">
