create new event locally

--- a/templates/views/events.hbs
+++ b/templates/views/events.hbs
@@ -15,7 +15,7 @@
 <div class="container-fluid" id="events">
     <div class="w-100 mx-auto">
         {{#if login}}
-        <button type="button" class="btn btn-outline-primary mx-auto my-3 d-block">新建活动</button>
+        <button type="button" class="btn btn-outline-primary mx-auto my-3 d-block"><a href="/events/create">新建活动</a></button>
         {{/if}}
         <div class="row row-cols-1 row-cols-md-2">
             {{!-- 往期活动 --}}
