--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -24,7 +24,9 @@
         {{/if}}
         <p class="sr-only">{{id}}</p>
         <h3 class="text-center mb-3">{{title}}</h3>
-        <p class="text-center my-3"><small>活动日期：{{event_date}} &nbsp; 作者：{{author}} &nbsp; 发表日期：{{create_date}}</small></p>
+        <div class="d-flex flex-wrap my-3 justify-content-around">
+            <small class="text-danger font-weight-bold">活动日期：{{event_date}}</small><small>作者：{{author}}</small><small>发表日期：{{create_date}}</small>
+        </div>
         {{breaklines content}}
     </div>
 </div>
