--- a/templates/views/sign-in.hbs
+++ b/templates/views/sign-in.hbs
@@ -82,7 +82,7 @@
           }
           window.location.href = '/events';
         })
-        .catch((err)=>console.log(err))
+        .catch((err)=>console.log(err));
 
     });
 
