--- a/templates/views/event-page.hbs
+++ b/templates/views/event-page.hbs
@@ -14,7 +14,7 @@
 
 {{!-- 活动报道 --}}
 <div class="container-fluid" id="event-page">
-    <div class="w-75 mx-auto my-3">
+    <div class="w-75 mx-auto my-3 pb-5">
         {{#if login}}
         <div class="d-flex flex-wrap justify-content-around">
             <button type="button" id="edit" class="btn btn-outline-primary my-3 d-block">编辑</button>
