--- a/templates/views/events.hbs
+++ b/templates/views/events.hbs
@@ -91,6 +91,24 @@
 
 
 
-<script src="js/events.js"></script>
+<script>
+
+$("#events .events-list a").on("click", (e) => {
+    e.preventDefault();
+
+    const id = $(e.target).attr("id");
+    const title = $(e.target)
+        .children("div")
+        .children("span:nth-child(1)")
+        .html();
+    const create_date = $(e.target)
+        .children("div")
+        .children("span:nth-child(2)")
+        .html();
+    // console.log({id,title,create_date});
+
+    window.location.href = "/events/" + id;
+});
+</script>
 
 {{>footer}} 
